--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="icon" type="image/x-icon" href="./image/Logo.png">
 </head>
 <body>
-    <p>Ahmad Asadi</p>
+    <h1>Ahmad Asadi</h1>
 </body>
 </html>
