--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="./image/Logo.png">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P46W9GQNQK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-P46W9GQNQK');
+</script>
 <body>
     <h1>Ahmad Asadi</h1>
 </body>
