--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -19,5 +19,6 @@
     </ul>
   </nav>
   <script src="/JS/navbar.js"></script>
+  <script src="/JS/mobile_toch_controll.js"></script>
 </body>
 </html>
