--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
 </head>
-<body>
+<body style="background-color: antiquewhite;">
   <nav class="parent-nav">
     <ul class="nav">
       <li><a href="/index.html">About</a></li>
