--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Publications</title>
+  <meta name="description" content="Discover Ahmad Asadi's publications">
+  <meta name="author" content="Ahmad Asadi">
+  <meta name="keywords" content="Ahmad Asadi Publications">
+  <title>Publications - Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
