--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <meta name="description" content="Learn about Ahmad Asadi">
+  <meta name="author" content="Ahmad Asadi">
+  <meta name="keywords" content="Ahmad Asadi, About Ahmad Asadi">
+  <title>About - Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
