--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
+  <meta name="description" content="Read Ahmad Asadi's blog">
+  <meta name="author" content="Ahmad Asadi">
+  <meta name="keywords" content="Ahmad Asadi Blog's">
+  <title>Blog - Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
