--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi, About Ahmad Asadi">
   <title>About - Ahmad Asadi</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo.png">
+  <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Ahmad Asadi",
+      "url": "https://ahmadasadi.ir",
+      "image": "https://ahmadasadi.ir/image/personal.jpg",
+      "sameAs": [
+        "https://github.com/AsadiAhmad",
+        "https://linkedin.com/in/asadi-ahmad"
+      ],
+      "jobTitle": "Researcher and Developer",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Tehran",
+        "addressCountry": "Iran"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Support",
+        "email": "ahmadasadi1381.22@gmail.com"
+      }
+    }
+  </script>   
 </head>
 <body style="background-color: antiquewhite;">
   <nav class="parent-nav">
