--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -7,9 +7,26 @@
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Blog's">
   <title>Blog - Ahmad Asadi</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo.png">
+  <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Blog",
+      "name": "Blog - Ahmad Asadi",
+      "url": "https://ahmadasadi.ir/blog.html",
+      "author": {
+        "@type": "Person",
+        "name": "Ahmad Asadi"
+      },
+      "description": "Ahmad Asadi's personal blog.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Ahmad Asadi"
+      }
+    }
+  </script>    
 </head>
 <body style="background-color: antiquewhite;">
   <nav class="parent-nav">
