--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -7,9 +7,22 @@
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Projects">
   <title>Projects - Ahmad Asadi</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo.png">
+  <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Projects - Ahmad Asadi",
+      "url": "https://ahmadasadi.ir/projects.html",
+      "about": "Explore Ahmad Asadi's projects.",
+      "author": {
+        "@type": "Person",
+        "name": "Ahmad Asadi"
+      }
+    }
+  </script>    
 </head>
 <body style="background-color: antiquewhite;">
   <nav class="parent-nav">
