--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -7,9 +7,30 @@
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Publications">
   <title>Publications - Ahmad Asadi</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo.png">
+  <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CreativeWork",
+      "name": "Publications - Ahmad Asadi",
+      "url": "https://ahmadasadi.ir/publication.html",
+      "author": {
+        "@type": "Person",
+        "name": "Ahmad Asadi"
+      },
+      "about": "Ahmad Asadi Publications.",
+      "creator": {
+        "@type": "Person",
+        "name": "Ahmad Asadi"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Self-Published"
+      }
+    }
+  </script>    
 </head>
 <body style="background-color: antiquewhite;">
   <nav class="parent-nav">
