--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -28,7 +29,7 @@
     }
   </script>    
 </head>
-<body style="background-color: antiquewhite;">
+<body id="particle-wave">
   <nav class="parent-nav">
     <ul class="nav">
       <li><a href="/index.html">About</a></li>
@@ -40,5 +41,7 @@
   </nav>
   <script src="/JS/navbar.js"></script>
   <script src="/JS/mobile_toch_controll.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="/JS/dynamic_background.js"></script>
 </body>
 </html>
