--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <link rel="stylesheet" href="/CSS/dark_theme.css">
   <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
     {
@@ -33,19 +34,19 @@
     }
   </script>    
 </head>
-<body id="particle-wave">
+<body>
   <nav class="parent-nav">
     <ul class="nav">
-      <li><a href="/index.html">About</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/HTML/projects.html">Projects</a></li>
       <li><a href="/HTML/publication.html">Publications</a></li>
-      <li><a href="/HTML/blog.html">Blog</a></li>
+      <li><a href="/HTML/notes.html">Notes</a></li>
+      <li><a href="/HTML/about.html">About</a></li>
       <div class="animation"></div>
     </ul>
   </nav>
+  <script src="/JS/dark_theme.js"></script>
   <script src="/JS/navbar.js"></script>
   <script src="/JS/mobile_toch_controll.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="/JS/dynamic_background.js"></script>
 </body>
 </html>
