--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Read Ahmad Asadi's blog">
+  <meta name="description" content="Learn more about Ahmad Asadi">
   <meta name="author" content="Ahmad Asadi">
-  <meta name="keywords" content="Ahmad Asadi Blog's">
-  <title>Blog - Ahmad Asadi</title>
+  <meta name="keywords" content="Ahmad Asadi About">
+  <title>About - Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
+  <link rel="stylesheet" href="/CSS/dark_theme.css">
   <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Blog",
-      "name": "Blog - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/blog.html",
+      "@type": "WebPage",
+      "name": "About - Ahmad Asadi",
+      "url": "https://ahmadasadi.ir/HTML/about.html",
       "author": {
         "@type": "Person",
         "name": "Ahmad Asadi"
       },
-      "description": "Ahmad Asadi's personal blog.",
+      "description": "About Ahmad Asadi.",
       "publisher": {
         "@type": "Organization",
         "name": "Ahmad Asadi"
@@ -29,19 +30,19 @@
     }
   </script>    
 </head>
-<body id="particle-wave">
+<body>
   <nav class="parent-nav">
     <ul class="nav">
-      <li><a href="/index.html">About</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/HTML/projects.html">Projects</a></li>
       <li><a href="/HTML/publication.html">Publications</a></li>
-      <li><a href="/HTML/blog.html">Blog</a></li>
+      <li><a href="/HTML/notes.html">Notes</a></li>
+      <li><a href="/HTML/about.html">About</a></li>
       <div class="animation"></div>
     </ul>
   </nav>
+  <script src="/JS/dark_theme.js"></script>
   <script src="/JS/navbar.js"></script>
   <script src="/JS/mobile_toch_controll.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="/JS/dynamic_background.js"></script>
 </body>
 </html>
