--- a/HTML/notes.html
+++ b/HTML/notes.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore the projects by Ahmad Asadi">
+  <meta name="description" content="Read Ahmad Asadi's notes">
   <meta name="author" content="Ahmad Asadi">
-  <meta name="keywords" content="Ahmad Asadi Projects">
-  <title>Projects - Ahmad Asadi</title>
+  <meta name="keywords" content="Ahmad Asadi Notes">
+  <title>Notes - Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
@@ -15,12 +15,16 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Projects - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/projects.html",
-      "about": "Explore Ahmad Asadi's projects.",
+      "@type": "CollectionPage",
+      "name": "Notes - Ahmad Asadi",
+      "url": "https://ahmadasadi.ir/HTML/Notes.html",
       "author": {
         "@type": "Person",
+        "name": "Ahmad Asadi"
+      },
+      "description": "Ahmad Asadi's personal notes.",
+      "publisher": {
+        "@type": "Organization",
         "name": "Ahmad Asadi"
       }
     }
