--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
-  <link rel="stylesheet" href="/CSS/header.css">
-  <link rel="stylesheet" href="/CSS/background.css">
+  <link rel="stylesheet" href="/CSS/index.css">
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -36,7 +35,7 @@
         "email": "ahmadasadi1381.22@gmail.com"
       }
     }
-  </script>   
+  </script>
 </head>
 <body>
   <nav class="parent-nav">
@@ -49,9 +48,28 @@
       <div class="animation"></div>
     </ul>
   </nav>
+
   <header>
-    
+    <!-- Hero Section Start -->
+    <section class="hero" id="home">
+      <div class="hero-image-wrap">
+        <div class="hero-blob" aria-hidden="true"></div>
+        <img class="hero-image" src="/image/Personal/personal_transparent.png" alt="Portrait of Ahmad Asadi">
+      </div>
+
+      <div class="hero-content">
+        <p class="hero-greeting">Hi,</p>
+        <h1 class="hero-title">I'm <span>Ahmad, </span><br>a Researcher</h1>
+
+        <div class="hero-actions">
+          <a class="hero-btn hero-btn-primary" href="/Ahmad-Asadi-CV.pdf" download>Download CV</a>
+          <a class="hero-btn hero-btn-secondary" href="/HTML/about.html">About Me</a>
+        </div>
+      </div>
+    </section>
+    <!-- Hero Section End -->
   </header>
+
   <script src="/JS/dark_theme.js"></script>
   <script src="/JS/navbar.js"></script>
   <script src="/JS/mobile_toch_controll.js"></script>
