--- a/HTML/about.html
+++ b/HTML/about.html
@@ -3,32 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn more about Ahmad Asadi">
+  <meta name="description" content="Learn about Ahmad Asadi, his academic background, experiences, research interests in AI and Computer Vision, and his professional journey in image processing and machine learning.">
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi About">
-  <title>About - Ahmad Asadi</title>
+  <meta property="og:title" content="About Ahmad Asadi">
+  <meta property="og:description" content="Learn about Ahmad Asadi, his academic background, experiences and research interests">
+  <meta property="og:image" content="https://ahmadasadi.ir/image/Personal/personal.jpg">
+  <meta property="og:url" content="https://ahmadasadi.ir/HTML/about.html">
+  <meta property="og:type" content="website">
+
+  <title>About Ahmad Asadi</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
-  <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "About - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/HTML/about.html",
-      "author": {
-        "@type": "Person",
-        "name": "Ahmad Asadi"
-      },
-      "description": "About Ahmad Asadi.",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Ahmad Asadi"
-      }
-    }
-  </script>    
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfilePage",
+    "@id": "https://ahmadasadi.ir/HTML/about.html",
+    "url": "https://ahmadasadi.ir/HTML/about.html",
+    "name": "About Ahmad Asadi",
+    "description": "Learn about Ahmad Asadi, his academic background, experiences, research interests in AI and Computer Vision, and his professional journey in image processing and machine learning.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://ahmadasadi.ir",
+      "name": "Ahmad Asadi | Computer Vision Researcher"
+    },
+    "mainEntity": {
+      "@type": "Person",
+      "name": "Ahmad Asadi",
+      "url": "https://ahmadasadi.ir",
+      "image": "https://ahmadasadi.ir/image/Personal/personal.jpg",
+      "description": "Learn about Ahmad Asadi, his academic background, experiences and research interests",
+      "sameAs": [
+        "https://github.com/AsadiAhmad",
+        "https://linkedin.com/in/asadi-ahmad"
+      ]
+    },
+    "image": "https://ahmadasadi.ir/image/Personal/personal.jpg"
+  }
+</script>
 </head>
 <body>
   <nav class="parent-nav">
