--- a/HTML/notes.html
+++ b/HTML/notes.html
@@ -3,32 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Read Ahmad Asadi's notes">
+  <meta name="description" content="Read Ahmad Asadi's notes about Computer Vision, Computer Science, Math and AI">
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Notes">
-  <title>Notes - Ahmad Asadi</title>
+  <meta property="og:title" content="Notes about Computer Science and AI">
+  <meta property="og:description" content="Read Ahmad Asadi's notes about Computer Vision, Computer Science, Math and AI">
+  <meta property="og:image" content="https://ahmadasadi.ir/image/Personal/personal.jpg">
+  <meta property="og:url" content="https://ahmadasadi.ir/HTML/notes.html">
+  <meta property="og:type" content="website">
+
+  <title>Notes about Computer Science and AI</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
-  <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Notes - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/HTML/Notes.html",
-      "author": {
-        "@type": "Person",
-        "name": "Ahmad Asadi"
-      },
-      "description": "Ahmad Asadi's personal notes.",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Ahmad Asadi"
-      }
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "@id": "https://ahmadasadi.ir/HTML/notes.html",
+    "url": "https://ahmadasadi.ir/HTML/notes.html",
+    "name": "Notes about Computer Science and AI",
+    "description": "Read Ahmad Asadi's notes about Computer Vision, Computer Science, Math and AI",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://ahmadasadi.ir",
+      "name": "Ahmad Asadi | Computer Vision Researcher"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Ahmad Asadi",
+      "url": "https://ahmadasadi.ir"
+    },
+    "image": "https://ahmadasadi.ir/image/Personal/personal.jpg",
+    "about": {
+      "@type": "Thing",
+      "description": "Notes about Computer Vision, Computer Science, Math and AI"
     }
-  </script>    
+  }
+  </script>
 </head>
 <body>
   <nav class="parent-nav">
