--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -3,28 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore the projects by Ahmad Asadi">
+  <meta name="description" content="Explore the Computer Vision, Computer Science and AI projects by Ahmad Asadi">
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Projects">
-  <title>Projects - Ahmad Asadi</title>
+  <meta property="og:title" content="Projects | Computer Science & AI Implementations">
+  <meta property="og:description" content="Explore the Computer Vision, Computer Science and AI projects by Ahmad Asadi">
+  <meta property="og:image" content="https://ahmadasadi.ir/image/Personal/personal.jpg">
+  <meta property="og:url" content="https://ahmadasadi.ir/HTML/projects.html">
+  <meta property="og:type" content="website">
+
+  <title>Projects | Computer Science & AI Implementations</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
-  <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Projects - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/projects.html",
-      "about": "Explore Ahmad Asadi's projects.",
-      "author": {
-        "@type": "Person",
-        "name": "Ahmad Asadi"
-      }
-    }
-  </script>    
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "@id": "https://ahmadasadi.ir/HTML/projects.html",
+    "url": "https://ahmadasadi.ir/HTML/projects.html",
+    "name": "Projects | Computer Science & AI Implementations",
+    "description": "Explore the Computer Vision, Computer Science and AI projects by Ahmad Asadi",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://ahmadasadi.ir",
+      "name": "Ahmad Asadi | Computer Vision Researcher"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Ahmad Asadi",
+      "url": "https://ahmadasadi.ir"
+    },
+    "image": "https://ahmadasadi.ir/image/Personal/personal.jpg"
+  }
+  </script> 
 </head>
 <body>
   <nav class="parent-nav">
