--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -3,36 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Discover Ahmad Asadi's publications">
+  <meta name="description" content="Discover Ahmad Asadi's publications such as Reseach Articles, Scientific Books and Useful Libraries">
   <meta name="author" content="Ahmad Asadi">
   <meta name="keywords" content="Ahmad Asadi Publications">
-  <title>Publications - Ahmad Asadi</title>
+  <meta property="og:title" content="Publications | Articles, Books and Libraries">
+  <meta property="og:description" content="Discover Ahmad Asadi's publications such as Reseach Articles, Scientific Books and Useful Libraries">
+  <meta property="og:image" content="https://ahmadasadi.ir/image/Personal/personal.jpg">
+  <meta property="og:url" content="https://ahmadasadi.ir/HTML/publication.html">
+  <meta property="og:type" content="website">
+
+  <title>Publications | Articles, Books and Libraries</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
-  <link rel="stylesheet" href="/CSS/background.css">
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CreativeWork",
-      "name": "Publications - Ahmad Asadi",
-      "url": "https://ahmadasadi.ir/publication.html",
-      "author": {
-        "@type": "Person",
-        "name": "Ahmad Asadi"
-      },
-      "about": "Ahmad Asadi Publications.",
-      "creator": {
-        "@type": "Person",
-        "name": "Ahmad Asadi"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "Self-Published"
-      }
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "@id": "https://ahmadasadi.ir/HTML/publication.html",
+    "url": "https://ahmadasadi.ir/HTML/publication.html",
+    "name": "Publications | Articles, Books and Libraries",
+    "description": "Discover Ahmad Asadi's publications such as Research Articles, Scientific Books and Useful Libraries",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://ahmadasadi.ir",
+      "name": "Ahmad Asadi | Computer Vision Researcher"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Ahmad Asadi",
+      "url": "https://ahmadasadi.ir"
+    },
+    "image": "https://ahmadasadi.ir/image/Personal/personal.jpg",
+    "about": {
+      "@type": "Thing",
+      "description": "Research Articles, Scientific Books and Useful Libraries"
     }
-  </script>    
+  }
+  </script>
 </head>
 <body>
   <nav class="parent-nav">
