--- a/index.html
+++ b/index.html
@@ -3,38 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Learn about Ahmad Asadi">
+  <meta name="description" content="Official website of Ahmad Asadi, a Computer Vision researcher focused on efficient deep learning models and image processing">
   <meta name="author" content="Ahmad Asadi">
-  <meta name="keywords" content="Ahmad Asadi, About Ahmad Asadi">
-  <title>About - Ahmad Asadi</title>
+  <meta name="keywords" content="Ahmad Asadi, Computer Vision Researcher, AI Researcher, Image Processing, Deep Learning, Machine Learning, University of Tehran">
+  <meta property="og:title" content="Official website of Ahmad Asadi | Computer Vision Researcher">
+  <meta property="og:description" content="Computer Vision Researcher | M.Sc AI Student at University of Tehran">
+  <meta property="og:image" content="https://ahmadasadi.ir/image/Personal/personal.jpg">
+  <meta property="og:url" content="https://ahmadasadi.ir">
+  <meta property="og:type" content="website">
+
+  <title>Ahmad Asadi | Computer Vision Researcher</title>
   <link rel="icon" type="image/x-icon" href="/image/Logo/Logo.png">
   <link rel="stylesheet" href="/CSS/all.css">
   <link rel="stylesheet" href="/CSS/navbar.css">
   <link rel="stylesheet" href="/CSS/dark_theme.css">
   <link rel="stylesheet" href="/CSS/index.css">
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Ahmad Asadi",
-      "url": "https://ahmadasadi.ir",
-      "image": "https://ahmadasadi.ir/image/personal.jpg",
-      "sameAs": [
-        "https://github.com/AsadiAhmad",
-        "https://linkedin.com/in/asadi-ahmad"
-      ],
-      "jobTitle": "Researcher and Developer",
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ahmad Asadi",
+    "givenName": "Ahmad",
+    "familyName": "Asadi",
+    "url": "https://ahmadasadi.ir",
+    "image": "https://ahmadasadi.ir/image/Personal/personal.jpg",
+    "description": "Computer Vision Researcher focused on efficient deep learning models and image processing",
+    "email": "ahmadasadi1381.22@gmail.com",
+    "sameAs": [
+      "https://github.com/AsadiAhmad",
+      "https://linkedin.com/in/asadi-ahmad",
+      "https://scholar.google.com/citations?user=kLSNsD8AAAAJ&hl=en"
+    ],
+    "jobTitle": "Computer Vision Researcher",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "University of Tehran",
+      "department": "Computer Science"
+    },
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "University of Tehran"
+    },
+    "knowsAbout": [
+      "Computer Vision",
+      "Deep Learning",
+      "Image Processing",
+      "Machine Learning",
+      "Efficient Neural Networks"
+    ],
+    "hasOccupation": {
+      "@type": "Research",
+      "description": "Researching efficient deep learning models for computer vision applications",
+      "keywords": "efficient deep learning, computer vision, model compression, image processing"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Tehran",
+      "addressCountry": "IR"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "professional",
+      "email": "ahmadasadi1381.22@gmail.com",
+      "availableLanguage": ["English", "Persian"]
+    },
+    "nationality": {
+      "@type": "Country",
+      "name": "Iran"
+    },
+    "birthPlace": {
+      "@type": "Place",
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Tehran",
-        "addressCountry": "Iran"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "Customer Support",
-        "email": "ahmadasadi1381.22@gmail.com"
+        "addressLocality": "Qazvin",
+        "addressCountry": "IR"
       }
+    },
+    "mainEntityOfPage": {
+      "@type": "ProfilePage",
+      "@id": "https://ahmadasadi.ir"
     }
+  }
   </script>
 </head>
 <body>
