--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <h1 class="hero-title">I'm <span>Ahmad, </span><br>a Researcher</h1>
 
         <div class="hero-actions">
-          <a class="hero-btn hero-btn-primary" href="/Ahmad-Asadi-CV.pdf" download>Download CV</a>
-          <a class="hero-btn hero-btn-secondary" href="/HTML/about.html">About Me</a>
+          <a class="hero-btn hero-btn-primary" href="https://scholar.google.com/citations?user=kLSNsD8AAAAJ&hl=en" download>View Research</a>
+          <a class="hero-btn hero-btn-secondary" href="/PDF/AhmadAsadiCV.pdf">Download CV</a>
         </div>
       </div>
     </section>
