--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -117,8 +117,9 @@
       </div>
 
       <div class="hero-content">
-        <p class="hero-greeting">Hi,</p>
-        <h1 class="hero-title">I'm <span>Ahmad, </span><br>a Researcher</h1>
+        <h1 class="hero-title"><span>Ahmad Asadi,</span><br>Computer Vision Researcher</h1>
+        <h2 class="hero-subtitle">M.Sc AI Student at University of Tehran</h2>
+        <a class="hero-email" href="mailto:asadi.ahmad@ut.ac.ir">asadi.ahmad@ut.ac.ir</a>
 
         <div class="hero-actions">
           <a class="hero-btn hero-btn-primary light-shadow" href="https://scholar.google.com/citations?user=kLSNsD8AAAAJ&hl=en" download>View Researchs</a>
