--- a/HTML/publication.html
+++ b/HTML/publication.html
@@ -44,6 +44,14 @@
   }
   </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P46W9GQNQK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-P46W9GQNQK');
+</script>
 <body>
   <nav class="parent-nav">
     <ul class="nav">
