--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
       </div>
     </section>
     <!-- Hero Section End -->
+
+    <!-- Bio Section Start -->
+    <section class="bio" id="bio">
+      <div class="bio-inner">
+        <h2 class="bio-title">Bio</h2>
+        <p class="bio-text">
+          Master's student at University of Tehran with a focus on developing efficient computer vision models for deployment on low-resource systems. Research interests span machine learning optimization, medical imaging applications, and practical AI systems that bridge theoretical advances with real-world constraints. Committed to creating accessible, high-performance solutions that push the boundaries of what's possible with limited computational resources.
+        </p>
+        <a class="bio-btn hero-btn light-shadow" href="/HTML/about.html">About</a>
+      </div>
+    </section>
+    <!-- Bio Section End -->
   </header>
 
   <script src="/JS/dark_theme.js"></script>
